Empowering Businesses with Cutting-Edge Solutions.

--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -112,7 +112,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="col-lg-12">
                     <h6>Digital Edge Solution</h6>
                     <h2>We Boost Your Website Traffic</h2>
-                    <p>This template is brought to you by TemplateMo website. Feel free to use this for a commercial purpose. You are not allowed to redistribute the template ZIP file on any other template website. Thank you.</p>
+                    <p>Empowering Businesses with Cutting-Edge Solutions.</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
