--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -76,8 +76,9 @@ https://templatemo.com/tm-568-digimedia
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="homepage_3.html" class="logo">
-              <img src="assets/images/logo-v3.png" alt="">
+            <a href="digital-edge-solution.html" class="logo">
+              <!-- <img src="assets/images/logo-v3.png" alt=""> -->
+               <p style="font-size: 36px; font-weight: 600; margin: 30%; color: #007FFF;" class="logo-text">DigES</p>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -150,7 +151,7 @@ https://templatemo.com/tm-568-digimedia
                   <h4>Who is Digital Edge Solution <em>Agency</em></h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>Digital Edge Solution is a cutting-edge digital marketing agency dedicated to propelling businesses to new heights. We specialize in crafting innovative strategies that leverage the power of social media advertising, data analytics, and other digital tools to drive growth and maximize ROI. Our team of experienced professionals is committed to delivering exceptional results by understanding your unique business goals and tailoring our solutions accordingly. 1  Whether you're looking to increase brand awareness, generate leads, or boost sales, we've got you covered. Partner with us to gain a competitive edge in the digital landscape. <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">contribute a little amount</a> via PayPal to <a href="https://templatemo.com/contact" target="_blank">support TemplateMo</a> in creating new templates regularly.</p>
+                <p>Digital Edge Solution is a cutting-edge digital marketing agency dedicated to propelling businesses to new heights. We specialize in crafting innovative strategies that leverage the power of social media advertising, data analytics, and other digital tools to drive growth and maximize ROI. Our team of experienced professionals is committed to delivering exceptional results by understanding your unique business goals and tailoring our solutions accordingly. 1  Whether you're looking to increase brand awareness, generate leads, or boost sales, we've got you covered. Partner with us to gain a competitive edge in the digital landscape. </p>
                 <div class="row">
                   <div class="col-lg-4 col-sm-4">
                     <div class="skill-item first-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
@@ -164,7 +165,7 @@ https://templatemo.com/tm-568-digimedia
                         <div class="progress-value">
                           <div>
                             90%<br>
-                            <span>Coding</span>
+                            <span>Analytics</span>
                           </div>
                         </div>
                       </div>
@@ -182,7 +183,7 @@ https://templatemo.com/tm-568-digimedia
                         <div class="progress-value">
                           <div>
                             80%<br>
-                            <span>Photoshop</span>
+                            <span>Ads</span>
                           </div>
                         </div>
                       </div>
@@ -200,7 +201,7 @@ https://templatemo.com/tm-568-digimedia
                         <div class="progress-value">
                           <div>
                             80%<br>
-                            <span>Animation</span>
+                            <span>Email</span>
                           </div>
                         </div>
                       </div>
@@ -450,7 +451,7 @@ https://templatemo.com/tm-568-digimedia
                   <img src="assets/images/portfolio-01.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Website Builder</h4>
+                  <h4>Analytics</h4>
                   <span>Marketing</span>
                 </div>
               </div>
@@ -463,7 +464,7 @@ https://templatemo.com/tm-568-digimedia
                   <img src="assets/images/portfolio-01.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Website Builder</h4>
+                  <h4>Socia Media Ads</h4>
                   <span>Marketing</span>
                 </div>
               </div>
@@ -476,7 +477,7 @@ https://templatemo.com/tm-568-digimedia
                   <img src="assets/images/portfolio-02.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Website Builder</h4>
+                  <h4>Content Creation</h4>
                   <span>Marketing</span>
                 </div>
               </div>
@@ -489,7 +490,7 @@ https://templatemo.com/tm-568-digimedia
                   <img src="assets/images/portfolio-03.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>Website Builder</h4>
+                  <h4>Keywords Ranking</h4>
                   <span>Marketing</span>
                 </div>
               </div>
@@ -609,7 +610,7 @@ https://templatemo.com/tm-568-digimedia
               </div>
               <div class="col-lg-5">
                 <div id="map">
-                  <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://www.google.com/maps/embed/v1/place?q=Tanay+Rizal&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-lg-7">
