--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -658,7 +658,7 @@ https://templatemo.com/tm-568-digimedia
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="main-button ">Send Message Now</button>
+                        <button type="submit" name="Send" id="form-submit" class="main-button ">Send Message Now</button>
                       </fieldset>
                     </div>
                   </div>
