--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -601,7 +601,7 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
         <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="mail.php" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <div class="contact-dec">
@@ -658,7 +658,7 @@ https://templatemo.com/tm-568-digimedia
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" name="Send" id="form-submit" class="main-button ">Send Message Now</button>
+                        <button type="submit" name="send" id="form-submit" class="main-button ">Send Message Now</button>
                       </fieldset>
                     </div>
                   </div>
