--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-568-digimedia
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/slider-dec-v3.png" alt="">
+                <img src="assets/images/slider-dec-v4.png" alt="">
               </div>
             </div>
           </div>
@@ -620,7 +620,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/phone-icon.png" alt="">
-                          <a href="#">010-020-0340</a>
+                          <a href="tel:+639692245231">+639692245231</a>
                         </div>
                       </div>
                     </div>
@@ -628,7 +628,8 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/email-icon.png" alt="">
-                          <a href="#">our@email.com</a>
+                          <a href="">digitaledge
+                            solution<br>2025@gmail.com</a>
                         </div>
                       </div>
                     </div>
