email and phone number

--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -52,16 +52,15 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-8 col-sm-8 col-7">
           <ul class="info">
-            <li><a href="#"><i class="fa fa-envelope"></i>digitaledgesolution@company.com</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>010-020-0340</a></li>
+            <li><a href="mailto:digitaledgesolution2025@gmail.com"><i class="fa fa-envelope"></i>digitaledgesolution2025@gmail.com</a></li>
+            <li><a href="tel:+639692245231"><i class="fa fa-phone"></i>+639692245231</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-sm-4 col-5">
           <ul class="social-media">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-behance"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="https://web.facebook.com/profile.php?id=61572488122367"><i class="fa fa-facebook"></i></a></li>
+            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+            <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
           </ul>
         </div>
       </div>
@@ -628,7 +627,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/email-icon.png" alt="">
-                          <a href="">digitaledge
+                          <a href="mailto:digitaledgesolution2025@gmail.com">digitaledge
                             solution<br>2025@gmail.com</a>
                         </div>
                       </div>
