--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -416,7 +416,7 @@ https://templatemo.com/tm-568-digimedia
               </div>
               <div class="col-lg-4 col-sm-4">
                 <fieldset>
-                  <button type="submit" class="main-button">Get Quote Now</button>
+                  <button type="submit" name="send" class="main-button">Get Quote Now</button>
                 </fieldset>
               </div>
             </div>
