--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -402,7 +402,7 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
         <div class="col-lg-8 offset-lg-2  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
-          <form id="search" action="#" method="GET">
+          <form id="search" action="mail.php" method="GET">
             <div class="row">
               <div class="col-lg-4 col-sm-4">
                 <fieldset>
