--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -402,7 +402,7 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
         <div class="col-lg-8 offset-lg-2  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
-          <form id="search" action="/mail.php" method="post">
+          <form id="search" action="mail.php" method="post">
             <div class="row">
               <div class="col-lg-4 col-sm-4">
                 <fieldset>
@@ -600,7 +600,7 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
         <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="/mail.php" method="POST">
+          <form id="contact" action="mail.php" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <div class="contact-dec">
