--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <script src="https://www.google.com/recaptcha/api.js?render=6LelasgqAAAAAE4GCCP5ifn9NvW28Y8YJueZamDx"></script>
 <!--
 
 TemplateMo 568 DigiMedia
@@ -605,70 +606,72 @@ https://templatemo.com/tm-568-digimedia
         <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
           <form id="contact" action="mail.php" method="post">
             <div class="row">
-              <div class="col-lg-12">
-                <div class="contact-dec">
-                  <img src="assets/images/contact-dec-v3.png" alt="">
+                <div class="col-lg-12">
+                    <div class="contact-dec">
+                        <img src="assets/images/contact-dec-v3.png" alt="">
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-5">
-                <div id="map">
-                  <iframe src="https://www.google.com/maps/embed/v1/place?q=Tanay+Rizal&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="col-lg-5">
+                    <div id="map">
+                        <iframe src="https://www.google.com/maps/embed/v1/place?q=Tanay+Rizal&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-7">
-                <div class="fill-form">
-                  <div class="row">
-                    <div class="col-lg-4">
-                      <div class="info-post">
-                        <div class="icon">
-                          <img src="assets/images/phone-icon.png" alt="">
-                          <a href="tel:+639692245231">+639692245231</a>
+                <div class="col-lg-7">
+                    <div class="fill-form">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="info-post">
+                                    <div class="icon">
+                                        <img src="assets/images/phone-icon.png" alt="">
+                                        <a href="tel:+639692245231">+639692245231</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="info-post">
+                                    <div class="icon">
+                                        <img src="assets/images/email-icon.png" alt="">
+                                        <a href="mailto:digitaledgesolution2025@gmail.com">digitaledge
+                                            solution<br>2025@gmail.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="info-post">
+                                    <div class="icon">
+                                        <img src="assets/images/location-icon.png" alt="">
+                                        <a href="#">123 Rio de Janeiro</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <fieldset>
+                                    <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
+                                </fieldset>
+                                <fieldset>
+                                    <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                                </fieldset>
+                                <fieldset>
+                                    <input type="subject" name="subject" id="subject" placeholder="Subject" autocomplete="on">
+                                </fieldset>
+                            </div>
+                            <div class="col-lg-6">
+                                <fieldset>
+                                    <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
+                                </fieldset>
+                            </div>
+                            <div class="col-lg-12">
+                                <!-- Hidden input for reCAPTCHA token -->
+                                <input style="margin: 10%;" type="hidden" name="recaptcha_response" id="recaptchaResponse">
+                                <fieldset>
+                                    <button type="submit" name="send" id="form-submit" class="main-button">Send Message Now</button>
+                                </fieldset>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                    <div class="col-lg-4">
-                      <div class="info-post">
-                        <div class="icon">
-                          <img src="assets/images/email-icon.png" alt="">
-                          <a href="mailto:digitaledgesolution2025@gmail.com">digitaledge
-                            solution<br>2025@gmail.com</a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4">
-                      <div class="info-post">
-                        <div class="icon">
-                          <img src="assets/images/location-icon.png" alt="">
-                          <a href="#">123 Rio de Janeiro</a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-6">
-                      <fieldset>
-                        <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
-                      </fieldset>
-                      <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
-                      </fieldset>
-                      <fieldset>
-                        <input type="subject" name="subject" id="subject" placeholder="Subject" autocomplete="on">
-                      </fieldset>
-                    </div>
-                    <div class="col-lg-6">
-                      <fieldset>
-                        <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
-                      </fieldset>
-                    </div>
-                    <div class="col-lg-12">
-                      <fieldset>
-                        <button type="submit" name="send" id="form-submit" class="main-button ">Send Message Now</button>
-                      </fieldset>
-                    </div>
-                  </div>
                 </div>
-              </div>
             </div>
-          </form>
+        </form>
         </div>
       </div>
     </div>
@@ -739,9 +742,25 @@ https://templatemo.com/tm-568-digimedia
   </div>
   
 </footer>
+<script>
+  document.getElementById('contact').addEventListener('submit', function (event) {
+      event.preventDefault(); // Prevent form submission
 
+      // Execute reCAPTCHA
+      grecaptcha.ready(function () {
+          grecaptcha.execute('YOUR_SITE_KEY', { action: 'submit' }).then(function (token) {
+              // Add the token to the hidden input
+              document.getElementById('recaptchaResponse').value = token;
+
+              // Submit the form
+              document.getElementById('contact').submit();
+          });
+      });
+  });
+</script>
 
   <!-- Scripts -->
+  
   <script src="assets/js/cookie.js"></script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
