--- a/digital-edge-solution.html
+++ b/digital-edge-solution.html
@@ -748,7 +748,7 @@ https://templatemo.com/tm-568-digimedia
 
       // Execute reCAPTCHA
       grecaptcha.ready(function () {
-          grecaptcha.execute('YOUR_SITE_KEY', { action: 'submit' }).then(function (token) {
+          grecaptcha.execute('6LelasgqAAAAAE4GCCP5ifn9NvW28Y8YJueZamDx', { action: 'submit' }).then(function (token) {
               // Add the token to the hidden input
               document.getElementById('recaptchaResponse').value = token;
 
